--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=2a3b01464e710f472b45",
+    "/css/app.css": "/css/app.css?id=59938551a44a30f2054b"
 }
